Processing in Lua scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,12 @@ project(ImageDithering CXX)
 
 set(${PROJECT_NAME}_SOURCES main.cpp
 							src/algorithms/dithering.cpp
-							src/filedialogs/tinyfiledialogs.cpp
-							src/gui/raygui.cpp)
+							src/algorithms/luaalgorithm.cpp
+							src/gui/raygui.cpp
+							external/tinyfiledialogs/tinyfiledialogs.cpp)
 
 add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
-target_include_directories(${PROJECT_NAME} PRIVATE src/include)
+target_include_directories(${PROJECT_NAME} PRIVATE src/include external/tinyfiledialogs/include)
 
 target_link_options(${PROJECT_NAME} PRIVATE -static) # Link staticly
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wno-missing-braces) # Set warning flags
@@ -24,6 +25,10 @@ include(cmake/raylib.cmake) # Include raylib and featch if required
 target_compile_definitions(raylib PUBLIC SUPPORT_IMAGE_EXPORT) # Force image export support
 
 target_link_libraries(${PROJECT_NAME} raylib)
+
+# Lua
+add_subdirectory(external/Lua)
+target_link_libraries(${PROJECT_NAME} lua_static)
 
 # Linking required by raylib
 if (APPLE)
